--- a/app/src/main/res/xml/data_extraction_rules.xml
+++ b/app/src/main/res/xml/data_extraction_rules.xml
@@ -1,9 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
-<cloud-backup>
-    <include path="/path/to/include"/>
-    <exclude path="/path/to/exclude"/>
-</cloud-backup>
-<device-transfer>
-<include path="/path/to/include"/>
-<exclude path="/path/to/exclude"/>
-</device-transfer>
+<?xml version="1.0" encoding="utf-8"?><!--
+   Sample data extraction rules file; uncomment and customize as necessary.
+   See https://developer.android.com/about/versions/12/backup-restore#xml-changes
+   for details.
+-->
+<data-extraction-rules>
+    <cloud-backup>
+        <!-- TODO: Use <include> and <exclude> to control what is backed up.
+        <include .../>
+        <exclude .../>
+        -->
+    </cloud-backup>
+    <!--
+    <device-transfer>
+        <include .../>
+        <exclude .../>
+    </device-transfer>
+    -->
+</data-extraction-rules>
